# mandelbrot-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  mandel.h  timer.h
cpu/: CMakeLists.txt  main.cpp
gpu/: CMakeLists.txt  main.cu
