cmake_minimum_required(VERSION 3.7)
project(mandelbrot-gpu)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
include_directories(.. thrust)
set(CMAKE_CXX_FLAGS "--std=c++11")
set(CUDA_PROPAGATE_HOST_FLAGS ON)
find_package(CUDA REQUIRED)
cuda_add_executable(mandelbrot-gpu main.cu)
